# MMKV.NET

./: .gitattributes  .gitignore  ManagedMmkv.sln  README.md
.github/workflows/: build.yml  publish.yml
ManagedMmkv/: ManagedMmkv.csproj  Mmkv.cs  MmkvErrorType.cs  MmkvLogLevel.cs  MmkvMode.cs  MmkvRecoverStrategic.cs  MmkvSyncFlag.cs
ManagedMmkv/Interop/: NativeMethods.cs  NativeUtils.cs
ManagedMmkvTest/: ManagedMmkvTest.csproj  Tests.cs
cmmkv/: CMakeLists.txt
cmmkv/cmake/: linux-aarch64-toolchain.cmake
cmmkv/include/: cmmkv.h
cmmkv/src/: cmmkv.cpp  cmmkv.def
